--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -6,6 +6,7 @@
 
 .form-container {
   align-items: center;
+  background-color: rgb(19, 147, 185);
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -15,9 +16,10 @@
 
 .form {
   align-items: center;
-  background-color: rgb(235, 246, 252);
+  background-color: white;
   border-radius: 15px;
-  box-shadow: black -5px 2px 15px;
+  box-shadow: inset rgb(138, 196, 229) 8px 10px 16px , inset
+    -8px -10px 16px rgb(64, 118, 150) , rgb(69, 140, 179) 18px 24px 16px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,6 +31,7 @@
 }
 
 .input {
+  background-color: rgb(233, 239, 245);
   border: none;
   border-radius: 3px;
   margin-bottom: 5px;
@@ -37,11 +40,11 @@
 }
 
 .input:focus {
-  outline: green solid 3px;
+  outline: rgb(10, 133, 204) solid 3px;
 }
 
 .login-button {
-  background-color: blue;
+  background-color: rgb(0, 132, 255);
   border: none;
   border-radius: 3px;
   color: white;
@@ -51,10 +54,10 @@
 }
 
 .login-button:hover {
-  background-color: rgb(53, 151, 243);
+  background-color: rgb(96, 176, 251);
 }
 
 .login-button:disabled {
-  background-color: rgb(43, 43, 90);
-  color: rgb(102, 114, 165);
+  background-color: rgb(44, 86, 102);
+  color: rgb(161, 165, 187);
 }
