--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 15px 20px;
+  padding: 25px 20px;
 }
 
 .logo {
@@ -31,8 +31,8 @@
 }
 
 .input {
-  background-color: rgb(233, 239, 245);
   border: none;
+  border-bottom: 2.5px rgb(67, 130, 224) inset;
   border-radius: 3px;
   margin-bottom: 5px;
   padding: 15px 10px;
