--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,16 +6,24 @@
 
 .header-container {
   align-items: center;
+  background-color: rgb(115, 196, 233);
+  border-bottom: solid 4.5px rgb(59, 175, 230);
   display: flex;
   justify-content: space-between;
-  padding: 15px 20px;
+  padding: 10px 20px;
 }
 
 .header-container div {
+  align-items: center;
+  color: white;
   display: flex;
+  font-size: 20px;
+  font-weight: 700;
+  height: 80%;
   justify-content: space-around;
+  width: 450px;
 }
 
 .header-logo {
-  width: 80px;
+  width: 75px;
 }
