--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.form-container {
+.login-form-container {
   align-items: center;
   background-color: rgb(19, 147, 185);
   display: flex;
